--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -3,13 +3,9 @@
 .game__card {
     aspect-ratio: 3/4;
     width: 100%;
-    background-color: $primary;
     border-radius: 5px;
     transition: all 2s ease;
     transform-style: preserve-3d;
-    &:hover {
-        transform: rotateY(180deg);
-    }
     &__face {
         position: absolute;
         width: 100%;
@@ -18,13 +14,22 @@
         background-position: center;
         border: 2px solid $accent;
         border-radius: 5px;
+        transition: all 2s ease;
     }
     & .front {
-        background-image: url("../assets/mars.jpg");
         transform: rotateY(180deg);        
     }
     & .back {
         background-image: url("../assets/back.jpg");
         backface-visibility: hidden;
     }
+}
+
+.reveal-card {
+    transform: rotateY(180deg);
+}
+
+.disabled-card {
+    filter: saturate(0);
+    opacity: 0.5;
 }
