--- a/sass/main.css
+++ b/sass/main.css
@@ -84,13 +84,9 @@
 .game__card {
   aspect-ratio: 3/4;
   width: 100%;
-  background-color: #1fe08b;
   border-radius: 5px;
   transition: all 2s ease;
   transform-style: preserve-3d;
-}
-.game__card:hover {
-  transform: rotateY(180deg);
 }
 .game__card__face {
   position: absolute;
@@ -100,12 +96,21 @@
   background-position: center;
   border: 2px solid #5074e7;
   border-radius: 5px;
+  transition: all 2s ease;
 }
 .game__card .front {
-  background-image: url("../assets/mars.jpg");
   transform: rotateY(180deg);
 }
 .game__card .back {
   background-image: url("../assets/back.jpg");
   backface-visibility: hidden;
+}
+
+.reveal-card {
+  transform: rotateY(180deg);
+}
+
+.disabled-card {
+  filter: saturate(0);
+  opacity: 0.5;
 }/*# sourceMappingURL=main.css.map */
