--- a/sass/base/_mixin.scss
+++ b/sass/base/_mixin.scss
@@ -1,6 +1,16 @@
-@mixin center() {
+@mixin center($direction: column, $justify: center) {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: $direction;
+    justify-content: $justify;
     align-items: center;
+}
+
+@mixin container() {
+    height: 100dvh;
+    max-width: 700px;
+    margin-inline: auto;
+    padding-inline: 2rem;
+    @media screen and (max-width: 800px){
+        max-width: 500px;
+    }
 }
