--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,6 +6,7 @@
     border-radius: 5px;
     transition: all 2s ease;
     transform-style: preserve-3d;
+    background-color: $bg;
     &__face {
         position: absolute;
         width: 100%;
