--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -1,15 +1,38 @@
 @use "../base/mixin" as *;
 @use "../base//variables" as *;
 
+.game__background::before {
+    content: '';
+    position: absolute;
+    display: block;
+    height: 100dvh;
+    width: 100%;
+    background: url("../../assets/bg.jpg") no-repeat center center;
+    background-size: cover;
+    z-index: -1;
+    opacity: 0.7;
+}
+
 .game{
     @include center();
-    background-color: $bg;
+    @include container();
+    &__header {
+        @include center(row, space-between);
+        width: 100%;
+        padding: 20px;
+        border-radius: 10px;
+        background-color: $bg;
+        @media screen and (max-width: 800px) {
+            @include center();
+            gap: 20px;           
+        }
+    }
     &__grid {
         width: 100%;
-        max-width: 800px;
         margin-inline: auto;
+        margin-block: 3rem;
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        gap: 20px;
+        gap: 15px;
     }
 }
