--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -19,6 +19,7 @@
     &__header {
         @include center(row, space-between);
         width: 100%;
+        margin-top: 2rem;
         padding: 20px;
         border-radius: 10px;
         background-color: $bg;
