--- a/sass/main.css
+++ b/sass/main.css
@@ -81,6 +81,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  margin-top: 2rem;
   padding: 20px;
   border-radius: 10px;
   background-color: rgba(204, 204, 204, 0.8);
@@ -115,6 +116,18 @@
 .login__button:disabled {
   background-color: #dddbdb;
   color: #9e9d9d;
+}
+
+.game__back, .game__restart {
+  height: 50px;
+  width: 50px;
+  background-color: #85baee;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.game__back i, .game__restart i {
+  font-size: 2rem;
+  color: #041d12;
 }
 
 .login__input {
