--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,8 +4,8 @@
     &__button {
         width: 100%;
         padding: 15px;
-        background-color: $accent;
-        color: $bg;
+        background-color: $secondary;
+        color: $text;
         font-size: 1em;
         border-radius: 10px;
         cursor: pointer;
