--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -13,7 +13,7 @@
         height: 100%;
         background-size: cover;
         background-position: center;
-        border: 2px solid $accent;
+        border: 2px solid $secondary;
         border-radius: 5px;
         transition: all 2s ease;
     }
