--- a/sass/main.css
+++ b/sass/main.css
@@ -43,7 +43,7 @@
   padding-bottom: 20px;
 }
 .login__header__title {
-  color: #1fe08b;
+  color: #007F73;
   font-size: 1.5rem;
   text-transform: uppercase;
 }
@@ -107,8 +107,8 @@
 .login__button {
   width: 100%;
   padding: 15px;
-  background-color: #5074e7;
-  color: rgba(204, 204, 204, 0.8);
+  background-color: #FDA403;
+  color: #041d12;
   font-size: 1em;
   border-radius: 10px;
   cursor: pointer;
@@ -121,7 +121,7 @@
 .game__back, .game__restart {
   height: 50px;
   width: 50px;
-  background-color: #85baee;
+  background-color: #FDA403;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -134,7 +134,7 @@
   width: 100%;
   margin-bottom: 15px;
   padding: 15px;
-  border: 2px solid #1fe08b;
+  border: 2px solid #007F73;
   border-radius: 10px;
   font-size: 1em;
   outline: none;
@@ -154,7 +154,7 @@
   height: 100%;
   background-size: cover;
   background-position: center;
-  border: 2px solid #5074e7;
+  border: 2px solid #FDA403;
   border-radius: 5px;
   transition: all 2s ease;
 }
