--- a/sass/main.css
+++ b/sass/main.css
@@ -8,6 +8,17 @@
   color: #041d12;
 }
 
+.login__background::before {
+  content: "";
+  position: absolute;
+  display: block;
+  height: 100dvh;
+  width: 100%;
+  background: linear-gradient(45deg, #3681e3, #3810b0);
+  z-index: -1;
+  opacity: 0.7;
+}
+
 .login-container {
   display: flex;
   flex-direction: column;
@@ -17,7 +28,6 @@
   max-width: 700px;
   margin-inline: auto;
   padding-inline: 2rem;
-  background-color: rgba(204, 204, 204, 0.8);
 }
 @media screen and (max-width: 800px) {
   .login-container {
@@ -43,7 +53,7 @@
   padding-bottom: 20px;
 }
 .login__header__title {
-  color: #007F73;
+  color: #046484;
   font-size: 1.5rem;
   text-transform: uppercase;
 }
@@ -84,7 +94,11 @@
   margin-top: 2rem;
   padding: 20px;
   border-radius: 10px;
-  background-color: rgba(204, 204, 204, 0.8);
+  background-color: #046484;
+}
+.game__header span {
+  color: #FDA403;
+  font-size: 1.15rem;
 }
 @media screen and (max-width: 800px) {
   .game__header {
@@ -134,7 +148,7 @@
   width: 100%;
   margin-bottom: 15px;
   padding: 15px;
-  border: 2px solid #007F73;
+  border: 2px solid #046484;
   border-radius: 10px;
   font-size: 1em;
   outline: none;
@@ -146,7 +160,7 @@
   border-radius: 5px;
   transition: all 2s ease;
   transform-style: preserve-3d;
-  background-color: rgba(204, 204, 204, 0.8);
+  background-color: hsla(0, 0%, 80%, 0.8);
 }
 .game__card__face {
   position: absolute;
