--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -2,15 +2,7 @@
 @use "../base//variables" as *;
 
 .game__background::before {
-    content: '';
-    position: absolute;
-    display: block;
-    height: 100dvh;
-    width: 100%;
-    background: url("../../assets/bg.jpg") no-repeat center center;
-    background-size: cover;
-    z-index: -1;
-    opacity: 0.7;
+    @include background(url("../../assets/game-bg.jpg") no-repeat center center, 0.7);
 }
 
 .game{
