--- a/sass/layout/_login.scss
+++ b/sass/layout/_login.scss
@@ -18,4 +18,7 @@
         text-transform: uppercase;
         padding-bottom: 2rem;
     }
+    &__amount {
+        padding-bottom: 2.5rem;
+    }
 }
