--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -36,9 +36,17 @@
         background-color: $secondary;
         border-radius: 50%;
         cursor: pointer;
+        @media screen and (max-width: 800px) {
+            height: 30px;
+            width: 30px;      
+        }        
         & i {
             font-size: 2rem;
             color: $text;
+            @media screen and (max-width: 800px) {
+                font-size: 1rem;       
+            }
         }
+        
     }
 }
