--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -4,24 +4,32 @@
     aspect-ratio: 3/4;
     width: 100%;
     border-radius: 5px;
-    transition: all 2s ease;
+    transition: all 1s ease;
     transform-style: preserve-3d;
     background-color: $bg;
     &__face {
         position: absolute;
         width: 100%;
         height: 100%;
+        font-size: 4px;
         background-size: cover;
         background-position: center;
         border: 2px solid $secondary;
         border-radius: 5px;
         transition: all 2s ease;
+        pointer-events: none;
+        @media screen and (max-width: 700px) {
+            font-size: 3px;
+        }
+        @media screen and (max-width: 500px) {
+            font-size: 2px;
+        }
     }
     & .front {
         transform: rotateY(180deg);        
     }
     & .back {
-        background-image: url("../assets/back.jpg");
+        background: $primary;
         backface-visibility: hidden;
     }
 }
