Style: cards grid

--- a/sass/components/_astronaut.scss
+++ b/sass/components/_astronaut.scss
@@ -26,8 +26,8 @@
     position: absolute;
     content: "";
     background-color: #fcec8e;
-    height: 5px;
-    width: 100px;
+    height: 1.25em;
+    width: 6.87em;
     border-radius: 0.62em;
     top: 3em;
     left: 4.25em;
