--- a/sass/main.css
+++ b/sass/main.css
@@ -110,7 +110,6 @@
   margin-inline: auto;
   margin-block: 3rem;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
   gap: 15px;
 }
 
@@ -248,8 +247,8 @@
   position: absolute;
   content: "";
   background-color: #fcec8e;
-  height: 5px;
-  width: 100px;
+  height: 1.25em;
+  width: 6.87em;
   border-radius: 0.62em;
   top: 3em;
   left: 4.25em;
