--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -6,12 +6,12 @@
 }
 
 .game{
-    @include center();
+    @include center(column, space-between);
     @include container();
+    padding-block: 1rem;
     &__header {
         @include center(row, space-between);
         width: 100%;
-        margin-top: 2rem;
         padding: 20px;
         border-radius: 10px;
         background-color: $primary;
@@ -29,9 +29,18 @@
     }
     &__grid {
         width: 100%;
-        margin-inline: auto;
-        margin-block: 3rem;
+        margin-block: 1rem;
         display: grid;
         gap: 15px;
+    }
+    &__footer {
+        @include center(row, space-between);
+        width: 100%;
+        padding: 20px;
+        background-color: $primary;
+        border-radius: 10px;
+        & * {
+            color: $secondary;
+        }
     }
 }
