--- a/sass/main.css
+++ b/sass/main.css
@@ -67,12 +67,13 @@
 .game {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   height: 100dvh;
   max-width: 700px;
   margin-inline: auto;
   padding-inline: 2rem;
+  padding-block: 1rem;
 }
 @media screen and (max-width: 800px) {
   .game {
@@ -85,7 +86,6 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-top: 2rem;
   padding: 20px;
   border-radius: 10px;
   background-color: #046484;
@@ -107,10 +107,22 @@
 }
 .game__grid {
   width: 100%;
-  margin-inline: auto;
-  margin-block: 3rem;
+  margin-block: 1rem;
   display: grid;
   gap: 15px;
+}
+.game__footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  background-color: #046484;
+  border-radius: 10px;
+}
+.game__footer * {
+  color: #FDA403;
 }
 
 .login__button {
@@ -136,6 +148,11 @@
 }
 .login__amount-num:hover, .login__amount-num:active {
   background-color: #046484;
+}
+
+.active {
+  background-color: #046484;
+  transform: scale(0.95);
 }
 
 .game__back, .game__restart {
@@ -172,7 +189,7 @@
 }
 
 .game__card {
-  aspect-ratio: 3/4;
+  aspect-ratio: 1/1;
   width: 100%;
   border-radius: 5px;
   transition: all 1s ease;
