--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -10,14 +10,22 @@
     @include container();
     padding-block: 1rem;
     &__header {
-        @include center(row, space-between);
+        @include center(column);
+        gap: 20px;
         width: 100%;
         padding: 20px;
         border-radius: 10px;
         background-color: $primary;
+        &-info {
+            width: 100%;
+            @include center(row, space-between)
+        }
         & span {
             color: $secondary;
             font-size: 1.15rem;
+            &:first-child {
+                padding-right: 20px;
+            }
             @media screen and (max-width: 800px) {
                 font-size: 1rem;           
             }
@@ -29,6 +37,7 @@
     }
     &__grid {
         width: 100%;
+        height: 70dvh;
         margin-block: 1rem;
         display: grid;
         gap: 15px;
@@ -39,8 +48,12 @@
         padding: 20px;
         background-color: $primary;
         border-radius: 10px;
+        line-height: 25px;
         & * {
             color: $secondary;
+        }
+        & div {
+            text-align: right;
         }
     }
 }
