--- a/sass/main.css
+++ b/sass/main.css
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: center;
   height: 100dvh;
-  max-width: 700px;
+  max-width: 1000px;
   margin-inline: auto;
   padding-inline: 2rem;
 }
@@ -89,7 +89,7 @@
   justify-content: space-between;
   align-items: center;
   height: 100dvh;
-  max-width: 700px;
+  max-width: 1000px;
   margin-inline: auto;
   padding-inline: 2rem;
   padding-block: 1rem;
@@ -101,17 +101,28 @@
 }
 .game__header {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  gap: 20px;
   width: 100%;
   padding: 20px;
   border-radius: 10px;
   background-color: #046484;
 }
+.game__header-info {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 .game__header span {
   color: #FDA403;
   font-size: 1.15rem;
+}
+.game__header span:first-child {
+  padding-right: 20px;
 }
 @media screen and (max-width: 800px) {
   .game__header span {
@@ -126,6 +137,7 @@
 }
 .game__grid {
   width: 100%;
+  height: 70dvh;
   margin-block: 1rem;
   display: grid;
   gap: 15px;
@@ -139,9 +151,13 @@
   padding: 20px;
   background-color: #046484;
   border-radius: 10px;
+  line-height: 25px;
 }
 .game__footer * {
   color: #FDA403;
+}
+.game__footer div {
+  text-align: right;
 }
 
 .login__button {
@@ -175,7 +191,7 @@
   transform: scale(0.95);
 }
 
-.game__back, .game__restart {
+.game__back, .game__restart, .game__pause {
   height: 50px;
   width: 50px;
   background-color: #FDA403;
@@ -183,17 +199,17 @@
   cursor: pointer;
 }
 @media screen and (max-width: 800px) {
-  .game__back, .game__restart {
+  .game__back, .game__restart, .game__pause {
     height: 30px;
     width: 30px;
   }
 }
-.game__back i, .game__restart i {
+.game__back i, .game__restart i, .game__pause i {
   font-size: 2rem;
   color: #041d12;
 }
 @media screen and (max-width: 800px) {
-  .game__back i, .game__restart i {
+  .game__back i, .game__restart i, .game__pause i {
     font-size: 1rem;
   }
 }
@@ -209,7 +225,6 @@
 }
 
 .game__card {
-  aspect-ratio: 1/1;
   width: 100%;
   border-radius: 5px;
   transition: all 1s ease;
@@ -442,6 +457,10 @@
 .hand-r {
   transform: rotate(-20deg);
   right: -3.12em;
+}
+.hand-r:before {
+  left: 1.87em;
+  transform: rotate(90deg);
 }
 .hand-r:after {
   right: -0.43em;
