--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,33 +1,32 @@
 @use "../base/variables" as *;
 
-.login {
-    &__button {
-        width: 100%;
-        margin-top: 0.5rem;
-        padding: 15px;
-        background-color: $secondary;
-        color: $text;
-        font-size: 1em;
-        border-radius: 10px;
-        cursor: pointer;
-        &:disabled {
-            background-color: #dddbdb;
-            color: #9e9d9d;
-        }
+.button {
+    height: 50px;
+    background-color: $secondary;
+    color: $text;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.button--large {
+    width: 100%;
+    margin-top: 0.5rem;
+    padding: 15px;   
+    border-radius: 10px;
+    &:disabled {
+        background-color: #dddbdb;
+        color: #9e9d9d;
     }
-    &__amount {
-        &-num {
-            padding: 10px;
-            width: 50px;
-            border-radius: 5px;
-            font-size: 1rem;
-            background-color: $secondary;
-            cursor: pointer;
-            &:hover, &:active {
-                background-color: $primary;
-            } 
-        }
-    }
+}
+
+.button--square {
+    aspect-ratio: 1;
+    width: 50px;
+    border-radius: 5px;
+    cursor: pointer;
+    &:hover, &:active {
+        background-color: $primary;
+    } 
 }
 
 .active {
@@ -35,24 +34,20 @@
     transform: scale(0.95);
 }
 
-.game {
-    &__back, &__restart, &__pause {
-        height: 50px;
-        width: 50px;
-        background-color: $secondary;
-        border-radius: 50%;
-        cursor: pointer;
-        @media screen and (max-width: 800px) {
-            height: 30px;
-            width: 30px;
-        }
-        & i {
-            font-size: 2rem;
-            color: $text;
-            @media screen and (max-width: 800px) {
-                font-size: 1rem;       
-            }
-        }
-        
+.button--circle{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    @media screen and (max-width: 800px) {
+        height: 30px;
+        width: 30px;
     }
+    & i {
+        font-size: 2rem;
+        pointer-events: none;
+        @media screen and (max-width: 800px) {
+            font-size: 1rem;       
+        }
+    }
+    
 }
