--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -2,10 +2,11 @@
 
 .login__input {
     width: 100%;
+    height: 50px;
     margin-bottom: 15px;
     padding: 15px;
     border: 2px solid $primary;
     border-radius: 10px;
-    font-size: 1em;
+    font-size: 1rem;
     outline: none;
 }
