--- a/sass/main.css
+++ b/sass/main.css
@@ -8,7 +8,7 @@
   color: #041d12;
 }
 
-.login__background::before {
+.login-background::before {
   content: "";
   position: absolute;
   display: block;
@@ -58,20 +58,20 @@
     text-align: center;
   }
 }
-.login__amount {
-  padding-bottom: 2.5rem;
-}
 .login__error {
   color: red;
   font-size: 0.75rem;
   padding-bottom: 1rem;
+}
+.login__amount {
+  padding-bottom: 2.5rem;
 }
 
 .hide {
   visibility: hidden;
 }
 
-.game__background::before {
+.game-background::before {
   content: "";
   position: absolute;
   display: block;
@@ -160,29 +160,32 @@
   text-align: right;
 }
 
-.login__button {
+.button {
+  height: 50px;
+  background-color: #FDA403;
+  color: #041d12;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.button--large {
   width: 100%;
   margin-top: 0.5rem;
   padding: 15px;
-  background-color: #FDA403;
-  color: #041d12;
-  font-size: 1em;
   border-radius: 10px;
-  cursor: pointer;
 }
-.login__button:disabled {
+.button--large:disabled {
   background-color: #dddbdb;
   color: #9e9d9d;
 }
-.login__amount-num {
-  padding: 10px;
+
+.button--square {
+  aspect-ratio: 1;
   width: 50px;
   border-radius: 5px;
-  font-size: 1rem;
-  background-color: #FDA403;
   cursor: pointer;
 }
-.login__amount-num:hover, .login__amount-num:active {
+.button--square:hover, .button--square:active {
   background-color: #046484;
 }
 
@@ -191,43 +194,42 @@
   transform: scale(0.95);
 }
 
-.game__back, .game__restart, .game__pause {
+.button--circle {
   height: 50px;
   width: 50px;
-  background-color: #FDA403;
   border-radius: 50%;
-  cursor: pointer;
 }
 @media screen and (max-width: 800px) {
-  .game__back, .game__restart, .game__pause {
+  .button--circle {
     height: 30px;
     width: 30px;
   }
 }
-.game__back i, .game__restart i, .game__pause i {
+.button--circle i {
   font-size: 2rem;
-  color: #041d12;
+  pointer-events: none;
 }
 @media screen and (max-width: 800px) {
-  .game__back i, .game__restart i, .game__pause i {
+  .button--circle i {
     font-size: 1rem;
   }
 }
 
 .login__input {
   width: 100%;
+  height: 50px;
   margin-bottom: 15px;
   padding: 15px;
   border: 2px solid #046484;
   border-radius: 10px;
-  font-size: 1em;
+  font-size: 1rem;
   outline: none;
 }
 
 .game__card {
   width: 100%;
   border-radius: 5px;
-  transition: all 1s ease;
+  transition: all 600ms ease;
   transform-style: preserve-3d;
   background-color: rgba(204, 204, 204, 0.8);
 }
@@ -240,7 +242,7 @@
   background-position: center;
   border: 2px solid #FDA403;
   border-radius: 5px;
-  transition: all 2s ease;
+  transition: all 1s ease;
   pointer-events: none;
 }
 @media screen and (max-width: 700px) {
