--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -21,9 +21,8 @@
 
 .button--square {
     aspect-ratio: 1;
-    width: 50px;
+    height: 50px;
     border-radius: 5px;
-    cursor: pointer;
     &:hover, &:active {
         background-color: $primary;
     } 
