--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -35,7 +35,7 @@
             padding: 10px;
         }
     }
-    &__grid {
+    &__container {
         width: 100%;
         height: 70dvh;
         margin-block: 1rem;
