--- a/sass/main.css
+++ b/sass/main.css
@@ -135,7 +135,7 @@
     padding: 10px;
   }
 }
-.game__grid {
+.game__container {
   width: 100%;
   height: 70dvh;
   margin-block: 1rem;
@@ -181,9 +181,8 @@
 
 .button--square {
   aspect-ratio: 1;
-  width: 50px;
+  height: 50px;
   border-radius: 5px;
-  cursor: pointer;
 }
 .button--square:hover, .button--square:active {
   background-color: #046484;
