Fix: create an utility function for shuffle images and improve grid classes

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,6 +6,7 @@
     transition: all 600ms ease;
     transform-style: preserve-3d;
     background-color: $bg;
+    aspect-ratio: 2/3;
     &__face {
         position: absolute;
         width: 100%;
