--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -1,5 +1,5 @@
 @use "../base/mixin" as *;
-@use "../base//variables" as *;
+@use "../base/variables" as *;
 
 .game-background::before {
     @include background(url("../../assets/game-bg.jpg") no-repeat center center, 0.7);
@@ -36,11 +36,15 @@
         }
     }
     &__container {
+        @include center();
+        height: 100%;
         width: 100%;
-        height: 70dvh;
-        margin-block: 1rem;
-        display: grid;
-        gap: 15px;
+        &--grid {
+            width: 100%;
+            margin-block: 2rem;
+            display: grid;
+            gap: 15px;
+        }
     }
     &__footer {
         @include center(row, space-between);
@@ -55,5 +59,23 @@
         & div {
             text-align: right;
         }
+    }
+}
+
+.game--easy {
+    grid-template-columns: repeat(4, 1fr)
+}
+
+.game--medium {
+    grid-template-columns: repeat(6, 1fr);
+    @media screen and (max-width: 700px) {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.game--hard {
+    grid-template-columns: repeat(5, 1fr);
+    @media screen and (max-width: 700px) {
+        grid-template-columns: repeat(4, 1fr);
     }
 }
