--- a/sass/main.css
+++ b/sass/main.css
@@ -136,9 +136,16 @@
   }
 }
 .game__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   width: 100%;
-  height: 70dvh;
-  margin-block: 1rem;
+}
+.game__container--grid {
+  width: 100%;
+  margin-block: 2rem;
   display: grid;
   gap: 15px;
 }
@@ -158,6 +165,28 @@
 }
 .game__footer div {
   text-align: right;
+}
+
+.game--easy {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.game--medium {
+  grid-template-columns: repeat(6, 1fr);
+}
+@media screen and (max-width: 700px) {
+  .game--medium {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.game--hard {
+  grid-template-columns: repeat(5, 1fr);
+}
+@media screen and (max-width: 700px) {
+  .game--hard {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .button {
@@ -231,6 +260,7 @@
   transition: all 600ms ease;
   transform-style: preserve-3d;
   background-color: rgba(204, 204, 204, 0.8);
+  aspect-ratio: 2/3;
 }
 .game__card__face {
   position: absolute;
