--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -5,8 +5,23 @@
     height: 50px;
     margin-bottom: 15px;
     padding: 15px;
-    border: 2px solid $primary;
+    box-shadow: #f7f7f7 0px 3px 5px, #f7f7f7 0px 3px 5px;
+    border: 2px solid $text;
     border-radius: 10px;
     font-size: 1rem;
     outline: none;
+    -webkit-appearance: none;
+    appearance: none;
+    transition: all 400ms ease;
+    &:focus {
+        outline: none;
+        box-shadow: none;
+        border-color: $secondary;
+    }
+    &:valid {
+        transform: scale(0.98);
+    }
+    &::placeholder {
+        color: $bg;
+    } 
 }
