--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -15,10 +15,16 @@
         width: 100%;
         padding: 20px;
         border-radius: 10px;
-        background-color: $primary;
+        background: $gradient;
+        transform: perspective(80em) rotateX(18deg);
+        &-buttons {
+            @include center(row);
+            gap: 50px;
+            margin-block: 0.5rem;
+        }
         &-info {
             width: 100%;
-            @include center(row, space-between)
+            @include center(row, space-between);
         }
         & span {
             color: $secondary;
@@ -37,10 +43,11 @@
     }
     &__container {
         @include center();
-        height: 100%;
+        height: 70dvh;
         width: 100%;
         &--grid {
             width: 100%;
+            height: 100%;
             margin-block: 2rem;
             display: grid;
             gap: 15px;
@@ -50,7 +57,7 @@
         @include center(row, space-between);
         width: 100%;
         padding: 20px;
-        background-color: $primary;
+        background: $gradient;
         border-radius: 10px;
         line-height: 25px;
         & * {
