--- a/sass/layout/_login.scss
+++ b/sass/layout/_login.scss
@@ -15,15 +15,16 @@
     &__title {
         padding-bottom: 2.5rem;
             & span {
-            color: $primary;
-            font-size: 2rem;
-            text-transform: uppercase;
-            padding-block: 10px;
-            @media screen and (max-width: 800px)  {
                 display: block;
-                font-size: 2.5rem;
-                text-align: center;
-            }
+                padding-block: 10px;
+                color: $primary;
+                font-size: 4rem;
+                text-transform: uppercase;
+                text-align: right;
+                user-select: none;
+                @media screen and (max-width: 800px)  {
+                    font-size: 2.5rem;
+                }
         }
     }
     &__error {
