--- a/sass/base/_mixin.scss
+++ b/sass/base/_mixin.scss
@@ -1,28 +1,28 @@
 @mixin center($direction: column, $justify: center) {
-    display: flex;
-    flex-direction: $direction;
-    justify-content: $justify;
-    align-items: center;
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: center;
 }
 
 @mixin container() {
-    height: 100dvh;
-    max-width: 1000px;
-    margin-inline: auto;
-    padding-inline: 2rem;
-    @media screen and (max-width: 800px){
-        max-width: 500px;
-    }
+  height: 100dvh;
+  max-width: 1000px;
+  margin-inline: auto;
+  padding-inline: 2rem;
+  @media screen and (max-width: 800px) {
+    max-width: 500px;
+  }
 }
 
 @mixin background($background, $opacity: 1) {
-    content: '';
-    position: absolute;
-    display: block;
-    height: 100dvh;
-    width: 100%;
-    background: $background;
-    background-size: cover;
-    z-index: -1;
-    opacity: $opacity;
+  content: "";
+  position: absolute;
+  display: block;
+  height: 100dvh;
+  width: 100%;
+  background: $background;
+  background-size: cover;
+  z-index: -1;
+  opacity: $opacity;
 }
