--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -2,10 +2,8 @@ $primary: #046484;
 $secondary: #fda403;
 $text: #041d12;
 $bg: #cccc;
-$gradient: linear-gradient(
-  62deg,
+$gradient: linear-gradient(62deg,
   rgba(4, 100, 132, 1) 0%,
   rgba(15, 85, 112, 1) 29%,
   rgba(20, 58, 74, 1) 58%,
-  rgba(19, 44, 56, 1) 100%
-);
+  rgba(19, 44, 56, 1) 100%);
