--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,11 +1,13 @@
-@use "../base/variables" as *;
+@use "../base/variables"as *;
 
-.game__card {
-  width: 100%;
+.game-card {
+  aspect-ratio: 2 / 3;
+  height: 100%;
   border-radius: 5px;
   transition: all 600ms ease;
   transform-style: preserve-3d;
   background-color: $bg;
+
   &__face {
     position: absolute;
     width: 100%;
@@ -17,16 +19,20 @@
     border-radius: 5px;
     transition: all 1s ease;
     pointer-events: none;
+
     @media screen and (max-width: 700px) {
       font-size: 3px;
     }
+
     @media screen and (max-width: 500px) {
       font-size: 2px;
     }
   }
+
   & .front {
     transform: rotateY(180deg);
   }
+
   & .back {
     background: $gradient;
     backface-visibility: hidden;
