--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -1,17 +1,16 @@
-@use "../base/mixin" as *;
-@use "../base/variables" as *;
+@use "../base/mixin"as *;
+@use "../base/variables"as *;
 
 .game-background::before {
-  @include background(
-    url("../../assets/game-bg.jpg") no-repeat center center,
-    0.7
-  );
+  @include background(url("../../assets/game-bg.jpg") no-repeat center center,
+    0.7);
 }
 
 .game {
   @include center(column, space-between);
   @include container();
   padding-block: 1rem;
+
   &__header {
     @include center(column);
     gap: 20px;
@@ -20,42 +19,52 @@
     border-radius: 10px;
     background: $gradient;
     transform: perspective(80em) rotateX(18deg);
+
     &-buttons {
       @include center(row);
       gap: 50px;
       margin-block: 0.5rem;
     }
+
     &-info {
       width: 100%;
       @include center(row, space-between);
     }
+
     & span {
       color: $secondary;
       font-size: 1.15rem;
+
       &:first-child {
         padding-right: 20px;
       }
+
       @media screen and (max-width: 800px) {
         font-size: 1rem;
       }
     }
+
     @media screen and (max-width: 800px) {
       gap: 10px;
       padding: 10px;
     }
   }
+
   &__container {
     @include center();
     height: 70dvh;
     width: 100%;
+
     &--grid {
       width: 100%;
       height: 100%;
       margin-block: 2rem;
       display: grid;
+      justify-items: center;
       gap: 15px;
     }
   }
+
   &__footer {
     @include center(row, space-between);
     width: 100%;
@@ -63,9 +72,11 @@
     background: $gradient;
     border-radius: 10px;
     line-height: 25px;
+
     & * {
       color: $secondary;
     }
+
     & div {
       text-align: right;
     }
@@ -74,17 +85,27 @@
 
 .game--easy {
   grid-template-columns: repeat(4, 1fr);
+
+  @media screen and (max-width: 700px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .game--medium {
   grid-template-columns: repeat(6, 1fr);
+
   @media screen and (max-width: 700px) {
     grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media screen and (max-width: 500px) {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
 .game--hard {
   grid-template-columns: repeat(5, 1fr);
+
   @media screen and (max-width: 700px) {
     grid-template-columns: repeat(4, 1fr);
   }
